update Jenkins pipeline to use new dockerfiles